--- a/hw-01/hw-01.md
+++ b/hw-01/hw-01.md
@@ -1,1 +1,53 @@
+# Домашнее задание к занятию «Введение в Terraform»
 
+### Задание 1
+
+1. Перейдите в каталог [**src**](https://github.com/netology-code/ter-homeworks/tree/main/01/src). Скачайте все необходимые зависимости, использованные в проекте.
+```
+Done
+```
+2. Изучите файл **.gitignore**. В каком terraform-файле, согласно этому .gitignore, допустимо сохранить личную, секретную информацию?
+```
+personal.auto.tfvars
+```
+3. Выполните код проекта. Найдите  в state-файле секретное содержимое созданного ресурса **random_password**, пришлите в качестве ответа конкретный ключ и его значение.
+```
+"result": "ZzgFc3iNQya75DdJ"
+```
+4. Раскомментируйте блок кода, примерно расположенный на строчках 29–42 файла **main.tf**.
+Выполните команду ```terraform validate```. Объясните, в чём заключаются намеренно допущенные ошибки. Исправьте их.
+```
+Error: Missing name for resource
+│ 
+│   on main.tf line 24, in resource "docker_image":
+│   24: resource "docker_image" {
+│ 
+│ All resource blocks must have 2 labels (type, name).
+Пропущен аргумент "name"
+
+________________
+
+Error: Invalid resource name
+│ 
+│   on main.tf line 29, in resource "docker_container" "1nginx":
+│   29: resource "docker_container" "1nginx" {
+│ 
+│ A name must start with a letter or underscore and may contain only letters, digits, underscores, and dashes.
+Ошибка в имени "1nginx" правильно: "1nginx"
+
+_______________
+
+Error: Reference to undeclared resource
+│ 
+│   on main.tf line 31, in resource "docker_container" "nginx":
+│   31:   name  = "example_${random_password.random_string_FAKE.resulT}"
+│ 
+│ A managed resource "random_password" "random_string_FAKE" has not been declared in the root module.
+Ошибка в регистре resulT, правильно result
+
+```
+5. Выполните код. В качестве ответа приложите: исправленный фрагмент кода и вывод команды ```docker ps```.
+6. Замените имя docker-контейнера в блоке кода на ```hello_world```. Не перепутайте имя контейнера и имя образа. Мы всё ещё продолжаем использовать name = "nginx:latest". Выполните команду ```terraform apply -auto-approve```.
+Объясните своими словами, в чём может быть опасность применения ключа  ```-auto-approve```. Догадайтесь или нагуглите зачем может пригодиться данный ключ? В качестве ответа дополнительно приложите вывод команды ```docker ps```.
+7. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
+8. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **обязательно** подкрепите строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
