--- a/hw-01/hw-01.md
+++ b/hw-01/hw-01.md
@@ -47,11 +47,22 @@ Error: Reference to undeclared resource
 
 ```
 5. Выполните код. В качестве ответа приложите: исправленный фрагмент кода и вывод команды ```docker ps```.
-```
 ![#1](https://github.com/Devashe87/admin_home_works_DevOps28/blob/main/hw-01/4.png)
 ```
-
-6. Замените имя docker-контейнера в блоке кода на ```hello_world```. Не перепутайте имя контейнера и имя образа. Мы всё ещё продолжаем использовать name = "nginx:latest". Выполните команду ```terraform apply -auto-approve```.
+docker ps
+CONTAINER ID   IMAGE          COMMAND                  CREATED          STATUS         PORTS                  NAMES
+11b61b215e86   a8758716bb6a   "/docker-entrypoint.…"   10 seconds ago   Up 8 seconds   0.0.0.0:8000->80/tcp   example_ZzgFc3iNQya75DdJ
+```
+7. Замените имя docker-контейнера в блоке кода на ```hello_world```. Не перепутайте имя контейнера и имя образа. Мы всё ещё продолжаем использовать name = "nginx:latest". Выполните команду ```terraform apply -auto-approve```.
 Объясните своими словами, в чём может быть опасность применения ключа  ```-auto-approve```. Догадайтесь или нагуглите зачем может пригодиться данный ключ? В качестве ответа дополнительно приложите вывод команды ```docker ps```.
-7. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
-8. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **обязательно** подкрепите строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
+```
+-auto-approve - применяет все изменения без подтверждения, опасность в том что в коде может быть ошибки и их автоматическое применение вызовет проблемы в работоспособности
+```
+![#2](https://github.com/Devashe87/admin_home_works_DevOps28/blob/main/hw-01/6.png)
+
+
+8. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
+
+![#3](https://github.com/Devashe87/admin_home_works_DevOps28/blob/main/hw-01/9.png)
+
+9. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **обязательно** подкрепите строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
