--- a/hw-01/hw-01.md
+++ b/hw-01/hw-01.md
@@ -66,3 +66,15 @@ CONTAINER ID   IMAGE          COMMAND                  CREATED          STATUS  
 ![#3](https://github.com/Devashe87/admin_home_works_DevOps28/blob/main/hw-01/9.png)
 
 9. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **обязательно** подкрепите строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
+
+```
+resource "docker_image" "nginx" {
+  name         = "nginx:latest"
+  keep_locally = true
+}
+
+keep_locally (Boolean) If true, then the Docker image won't be deleted on destroy operation.
+If this is false, it will delete the image from the docker local storage on destroy operation.
+
+```
+
