--- a/hw-02/hw-02.md
+++ b/hw-02/hw-02.md
@@ -28,7 +28,7 @@ ssh-keygen -t ed25519
 Изменил
 service_account_key_file = file("~/.authorized_key.json") на token     = var.token
 platform_id = "standard-v1" # Есть только 3 Стандартные платформы
-cores         = 2 №минимальное количество ядер процессора для всех платформ равно 2
+cores         = 2 # Минимальное количество ядер процессора для всех платформ равно 2
 
 ```
 
