--- a/hw-02/hw-02.md
+++ b/hw-02/hw-02.md
@@ -93,7 +93,26 @@ core_fraction=5 означает, что VM будет использовать 
 1. В файле locals.tf опишите в **одном** local-блоке имя каждой ВМ, используйте интерполяцию ${..} с НЕСКОЛЬКИМИ переменными по примеру из лекции.
 2. Замените переменные внутри ресурса ВМ на созданные вами local-переменные.
 3. Примените изменения.
+```
+locals.tf
+locals {
+  vm_web_instance_name = "netology-${var.env}-${var.project}-${var.role[0]}"
+  vm_db_instance_name = "netology-${var.env}-${var.project}-${var.role[1]}"
+}
 
+main.tf
+***
+resource "yandex_compute_instance" "platform" {
+  name        = local.vm_web_instance_name
+  platform_id = var.vm_web_platform_id
+***
+
+***
+resource "yandex_compute_instance" "platform2" {
+  name        = local.vm_db_instance_name
+  platform_id = var.vm_db_platform_id
+***
+```
 
 ### Задание 6
 
