--- a/hw-02/hw-02.md
+++ b/hw-02/hw-02.md
@@ -134,6 +134,9 @@ resource "yandex_compute_instance" "platform2" {
      }
    }
    ```
+
+![#1.1](https://github.com/Devashe87/admin_home_works_DevOps28/blob/main/hw-02/6.1.png)
+
 3. Создайте и используйте отдельную map переменную для блока metadata, она должна быть общая для всех ваших ВМ.
    ```
    пример из terraform.tfvars:
@@ -142,8 +145,15 @@ resource "yandex_compute_instance" "platform2" {
      ssh-keys           = "ubuntu:ssh-ed25519 AAAAC..."
    }
    ```  
-  
+
+![#1.1](https://github.com/Devashe87/admin_home_works_DevOps28/blob/main/hw-02/6.2.png)  
+
+
 5. Найдите и закоментируйте все, более не используемые переменные проекта.
+```
+Done
+```
 6. Проверьте terraform plan. Изменений быть не должно.
 
+![#1.1](https://github.com/Devashe87/admin_home_works_DevOps28/blob/main/hw-02/6.3.png)
 ------
